:bug: fixing stuff

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -11,13 +11,11 @@
 
     <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="About"/>
-<meta name="twitter:description" content=" Bio Agent-based modelling Data analysis Data visualization and communication
-My main programming languages are R and NetLogo, but I am also experienced in QGIS, HTML and Java.
+<meta name="twitter:description" content=" Bio I did my Master in Forerstry sciences and forest ecology with a study focus on Ecosystem Modelling. My main research workflow includes agent-based modelling, mainly with NetLogo, data analysis, mainly with R, as well as data visualization and communication. I am also experienced in QGIS, HTML and Java.
 Publications  "/>
 
     <meta property="og:title" content="About" />
-<meta property="og:description" content=" Bio Agent-based modelling Data analysis Data visualization and communication
-My main programming languages are R and NetLogo, but I am also experienced in QGIS, HTML and Java.
+<meta property="og:description" content=" Bio I did my Master in Forerstry sciences and forest ecology with a study focus on Ecosystem Modelling. My main research workflow includes agent-based modelling, mainly with NetLogo, data analysis, mainly with R, as well as data visualization and communication. I am also experienced in QGIS, HTML and Java.
 Publications  " />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="/about/" />
@@ -102,11 +100,8 @@ Publications  " />
 
 <h2 id="bio">Bio</h2>
 
-<p>Agent-based modelling
-Data analysis
-Data visualization and communication</p>
-
-<p>My main programming languages are R and NetLogo, but I am also experienced in QGIS, HTML and Java.</p>
+<p>I did my Master in Forerstry sciences and forest ecology with a study focus on Ecosystem Modelling.
+My main research workflow includes agent-based modelling, mainly with NetLogo, data analysis, mainly with R, as well as data visualization and communication. I am also experienced in QGIS, HTML and Java.</p>
 
 <h2 id="publications">Publications</h2>
 
