:pencil: about update

--- a/public/projects/index.html
+++ b/public/projects/index.html
@@ -109,26 +109,31 @@ EFForTS-ABM Within the subproject B10 of the ongoing collaborative research cent
 <p><img src="/images/EFForTS-ABM.png" align="right" width="150" />
 Within the subproject B10 of the ongoing collaborative research center EFForTS (Collaborative Research Centre 990: Ecological and Socioeconomic Functions of Tropical Lowland Rainforest Transformation Systems (Sumatra, Indonesia)) we developed the integrated ecological-economic land-use change model EFForTS-ABM. The land-use change model in its current form, consists of a socio-economic and an ecological submodel. Within the socio-economic submodel, households make land use decisions by evaluating alternative management options. These decisions indirectly affect the ecological functions, which are part of the ecological submodel. The model rules and parameterization are mainly based on the results from other sub-projects within the CRC 990.</p>
 
-<p>Find more information and download the model on:
-<a href="http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0190506">EFForTS-ABM publication</a></p>
+<p>Find more information and download the model on:</p>
+
+<p><a href="http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0190506">EFForTS-ABM publication</a></p>
 
 <h2 id="efforts-lgraf">EFForTS-LGraf</h2>
 
 <p><img src="/images/EFForTS-LGraf.png" align="right" width="150" />
 Within the subproject B10 of the ongoing collaborative research center EFForTS (Collaborative Research Centre 990: Ecological and Socioeconomic Functions of Tropical Lowland Rainforest Transformation Systems (Sumatra, Indonesia)) we developed the Landscape Generator EFForTS-LGraf. EFForTS-LGraf is a process-based and agent-based landscape generator that incorporates agricultural expansion processes explicitly. The model serves to generate input maps for our integrated ecological-economic land-use change model EFForTS-ABM. It can also be used as a standalone tool for land-use analyses.</p>
 
-<p>Find more information, including manuals and examples and download the model on:
-<a href="https://github.com/nldoc/EFForTS-LGraf/tree/v1.1">EFForTS-LGraf GitHub repository</a>
-<a href="https://doi.org/10.1371/journal.pone.0222949">EFForTS-LGraf publication</a></p>
+<p>Find more information, including manuals and examples and download the model on:</p>
+
+<p><a href="https://github.com/nldoc/EFForTS-LGraf/tree/v1.1">EFForTS-LGraf GitHub repository</a></p>
+
+<p><a href="https://doi.org/10.1371/journal.pone.0222949">EFForTS-LGraf publication</a></p>
 
 <h2 id="nlrx-r-package">nlrx R package</h2>
 
 <p><img src="/images/nlrx.png" align="right" width="150" />
 The nlrx package provides tools to setup, run and analyze NetLogo model simulations in R. nlrx experiments use a similar structure as NetLogos Behavior Space experiments. However, nlrx offers more flexibility and additional tools for running and anlyzing complex simulation designs and sensitivity analyses. The user defines all information that is needed in an intuitive framework, using S4 class objects. Experiments are submitted from R to NetLogo via XML files that are dynamically written, based on specifications defined by the user. By nesting model calls in future environments, large simulation design with many runs can be executed in parallel. This also enables simulating NetLogo experiments on remote HPC machines.</p>
 
-<p>Find more information on:
-<a href="https://github.com/nldoc/nlrx">nlrx GitHub repository</a>
-<a href="https://doi.org/10.1111/2041-210X.13286">nlrx publication</a></p>
+<p>Find more information on:</p>
+
+<p><a href="https://github.com/nldoc/nlrx">nlrx GitHub repository</a></p>
+
+<p><a href="https://doi.org/10.1111/2041-210X.13286">nlrx publication</a></p>
 
   </article>
 </section>
