--- a/public/projects/index.html
+++ b/public/projects/index.html
@@ -12,13 +12,13 @@
     <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Projects"/>
 <meta name="twitter:description" content="I am currently working at the Department of Ecosystem Modelling at the University of Goettingen. My work is embedded within the EFForTS project.
-We have developed several tools, that are freely available:
-EFForTS-ABM Within the subproject B10 of the ongoing collaborative research center EFForTS (Collaborative Research Centre 990: Ecological and Socioeconomic Functions of Tropical Lowland Rainforest Transformation Systems (Sumatra, Indonesia)) we developed the integrated ecological-economic land-use change model EFForTS-ABM. The land-use change model in its current form, consists of a socio-economic and an ecological submodel."/>
+We have developed and published several freely available open-source tools:
+EFForTS-ABM Within the subproject B10 of the ongoing collaborative research center EFForTS (Collaborative Research Centre 990: Ecological and Socioeconomic Functions of Tropical Lowland Rainforest Transformation Systems (Sumatra, Indonesia)) we developed the integrated ecological-economic land-use change model EFForTS-ABM."/>
 
     <meta property="og:title" content="Projects" />
 <meta property="og:description" content="I am currently working at the Department of Ecosystem Modelling at the University of Goettingen. My work is embedded within the EFForTS project.
-We have developed several tools, that are freely available:
-EFForTS-ABM Within the subproject B10 of the ongoing collaborative research center EFForTS (Collaborative Research Centre 990: Ecological and Socioeconomic Functions of Tropical Lowland Rainforest Transformation Systems (Sumatra, Indonesia)) we developed the integrated ecological-economic land-use change model EFForTS-ABM. The land-use change model in its current form, consists of a socio-economic and an ecological submodel." />
+We have developed and published several freely available open-source tools:
+EFForTS-ABM Within the subproject B10 of the ongoing collaborative research center EFForTS (Collaborative Research Centre 990: Ecological and Socioeconomic Functions of Tropical Lowland Rainforest Transformation Systems (Sumatra, Indonesia)) we developed the integrated ecological-economic land-use change model EFForTS-ABM." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="/projects/" />
 
@@ -102,7 +102,7 @@ EFForTS-ABM Within the subproject B10 of the ongoing collaborative research cent
 
 <p>I am currently working at the Department of <a href="http://www.uni-goettingen.de/de/102170.html">Ecosystem Modelling</a> at the <a href="https://www.uni-goettingen.de/">University of Goettingen</a>. My work is embedded within the <a href="https://www.uni-goettingen.de/de/310995.html">EFForTS</a> project.</p>
 
-<p>We have developed several tools, that are freely available:</p>
+<p>We have developed and published several freely available open-source tools:</p>
 
 <h2 id="efforts-abm">EFForTS-ABM</h2>
 
